Made changes to the HTML

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -3,23 +3,27 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- Change the <title> from "Page Title" to "Hello World" -->
-    <title>Page Title</title>
+    <title>Hello World</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
-    <!-- Create a header element  -->
-
-    <!-- Inside the header, add an <h1> element containing your name -->
-
-    <!-- Include an image -->
-
-    <!-- Create an unordered list with 3 list items of fun facts about you -->
-
-    <!-- Create a footer element -->
-
-    <!-- Inside your footer, put a <p> element with your favorite quote -->
+    <header>
+        <h1 class="name">Levi Mastrud</h1>
+    </header>
+    <img src= "chunky.jpeg" alt="Big cat" title="Chunky" class="cat"/>
+    <ul>
+        <li>I am a trained Muay Thai kickboxer</li>
+        <li>I have one sister</li>
+        <li>I have two cats (neither pictured)</li>
+    </ul>
+    <footer>
+        <p>
+            "I think there's nothing cooler than being a lone wolf, except at wolf picnics when you don't have a partner for the wolf wheel barrow races." 
+            <br>
+            - Norm MacDonald
+        </p>
+    </footer>
 </body>
 </html>
