--- a/assignment/index.html
+++ b/assignment/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Hello World</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <script type="text/javascript" src="helloWorld.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
